# risc0-rust-examples

./: README.md
.github/workflows/: main.yml
bevy/core/: Cargo.toml
bevy/host/: Cargo.toml
bevy/host/src/: main.rs
bevy/methods/: Cargo.toml
bevy/methods/guest/: Cargo.toml
chess/: README.md
chess/core/: Cargo.toml
chess/core/src/: lib.rs
chess/host/: Cargo.toml
chess/host/src/: main.rs
chess/methods/: Cargo.toml
chess/methods/guest/: Cargo.toml
chibicc/: .gitignore  README.md
chibicc/chibicc-rs/: Cargo.toml  README.md  build.rs
chibicc/chibicc-rs/chibicc/: chibicc.h  codegen.c  main.c  posixio_stub.c  string_to_bin.c  tokenize.c
chibicc/chibicc-rs/src/: lib.rs
chibicc/host/: Cargo.toml
chibicc/host/src/: main.rs
chibicc/methods/: build.rs
chibicc/methods/guest/: Cargo.toml  build.rs
digital-signature/: Cargo.toml  README.md
digital-signature/cli/: Cargo.toml
digital-signature/cli/src/: lib.rs  main.rs
digital-signature/core/: Cargo.toml
digital-signature/core/src/: lib.rs
digital-signature/methods/: Cargo.toml  build.rs
digital-signature/methods/guest/: Cargo.toml
digital-signature/methods/inner/: Cargo.toml
digital-signature/methods/src/: lib.rs
digital-signature/risc0-build-methods/: Cargo.toml
digital-signature/shared/: Cargo.toml
digital-signature/state/: Cargo.toml
factors/: Cargo.toml  README.md
factors/factors/: Cargo.toml
factors/factors/src/: main.rs
factors/methods/guest/: Cargo.toml
json/: README.md
json/core/: Cargo.toml
json/core/src/: lib.rs
json/host/: Cargo.toml
json/host/src/: main.rs
json/methods/: Cargo.toml
json/methods/guest/: Cargo.toml
json/res/: example.json
password-checker/: Cargo.toml  README.md
password-checker/cli/: Cargo.toml
password-checker/cli/src/: main.rs
password-checker/core/: Cargo.toml
password-checker/core/src/: lib.rs
password-checker/methods/: Cargo.toml
password-checker/methods/guest/: Cargo.toml  build.rs
password-validity-checker/: Cargo.toml  README.md
password-validity-checker/cli/: Cargo.toml
password-validity-checker/cli/src/: main.rs
password-validity-checker/core/: Cargo.toml
password-validity-checker/methods/: Cargo.toml
password-validity-checker/methods/guest/: Cargo.toml
proof-of-reserves/: README.md
proof-of-reserves/host/: Cargo.toml  Makefile
proof-of-reserves/host/src/: main.rs
proof-of-reserves/methods/: Cargo.toml
proof-of-reserves/methods/guest/: Cargo.toml
sha/: Cargo.toml
sha/host/: Cargo.toml
sha/host/src/: main.rs
sha/methods/: Cargo.toml
sha/methods/guest/: Cargo.toml
voting-machine/: Cargo.toml  README.md  rust-toolchain
voting-machine/core/: Cargo.toml
voting-machine/core/src/: lib.rs
voting-machine/host/: Cargo.toml
voting-machine/host/src/: lib.rs
voting-machine/methods/: Cargo.toml
voting-machine/methods/guest/: Cargo.toml  build.rs
voting-machine/risc0-build-methods/: Cargo.toml
waldo/: Cargo.toml  README.md
waldo/core/: Cargo.toml
waldo/core/src/: image.rs  lib.rs  merkle.rs
waldo/host/: Cargo.toml
waldo/host/src/: main.rs
waldo/merkle/: Cargo.toml
waldo/merkle/src/: lib.rs
waldo/methods/: Cargo.toml  build.rs
waldo/methods/guest/: Cargo.toml
waldo/waldo/: Cargo.toml
waldo/waldo/src/: main.rs
wordle/: Cargo.toml  README.md
wordle/core/: Cargo.toml
wordle/core/src/: lib.rs
wordle/host/: Cargo.toml
wordle/host/src/: main.rs  wordlist.rs
wordle/methods/guest/: Cargo.toml
