[workspace]
members = [
    "methods",
    "host",
]

[patch.crates-io]
# n.b. These patches allow us to work with a recent commit rather than waiting for releases.
# Update the `rev` (to the same thing for all 3) to use a more recent (or older) risc0 commit.
risc0-zkp = { git = "https://github.com/risc0/risc0", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7"}
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7"}
risc0-build = { git = "https://github.com/risc0/risc0", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7"}
