[workspace]
members = [
    "core",
    "host",
    "methods",
]

[profile.release]
opt-level = 3

[patch.crates-io]
# TODO(victor): Remove these patch definitions when d02f606a is included in a release.
risc0-zkp = { git = "https://github.com/risc0/risc0", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7" }
risc0-build = { git = "https://github.com/risc0/risc0", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7" }
