[workspace]
members = [
    "methods",
    "core",
    "host",
]

[profile.release]
opt-level = 3

[patch.crates-io]
# TODO(victor): Remove these patch definitions when d02f606a is included in a release.
risc0-zkp = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46" }
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46" }
