[workspace]
members = [
    "core",
    "host",
    "methods",
]

[profile.release]
opt-level = 3

[patch.crates-io]
# TODO(victor): Remove these patch definitions when d6fc82a is included in a release.
risc0-zkp = { git = "https://github.com/risc0/risc0", rev = "d6fc82af471e34b5a65922ce50ff4c7db0ba62a4" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "d6fc82af471e34b5a65922ce50ff4c7db0ba62a4" }
risc0-build = { git = "https://github.com/risc0/risc0", rev = "d6fc82af471e34b5a65922ce50ff4c7db0ba62a4" }
