[package]
name = "chess-host"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.0"
shakmaty = "0.22"
methods = { path = "../methods" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46" }
serde = "1.0"
chess-core = { path = "../core" }
