[package]
name = "digital-signature"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.1"
digital-signature-core = { path = "../core" }
digital-signature-methods = { path = "../methods" }
env_logger = "0.9"
log = "0.4"
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46" }
risc0-zkp = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46" }
serde = "1.0"
sha2 = "0.10"

[dev-dependencies]
ctor = "0.1"