[package]
name = "digital-signature-core"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm-core = { version = "0.7.2", default-features = false, features = ["pure"] }
serde = { version = "1.0", default-features = false }

#[target.riscv32im-unknown-none-elf.dependencies]
#risc0-zkvm-core = { version = "0.7.2", default-features = false }
#risc0-zkvm-serde = { version = "0.7.2", default-features = false }
