[package]
name = "digital-signature-methods"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[profile.release]
lto = true
opt-level = "z"

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46" }
