[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
clap = "4.0"
risc0-zkp = { git = "https://github.com/risc0/risc0.git", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7" }
serde = "1.0"
