[package]
name = "sha-example"
version = "0.12.0"
edition = "2021"

[dependencies]
clap = "4.0"
methods = { path = "../methods" }
risc0-zkp = { git = "https://github.com/risc0/risc0.git", rev = "eaaae8b0dbba8658a62985d5d4b209de5ec6817d" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "eaaae8b0dbba8658a62985d5d4b209de5ec6817d" }
serde = "1.0"

[dev-dependencies]
sha2 = "0.10"
hex = "0.4"
