[package]
name = "voting-machine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm-core = { version = "0.7", default-features = false, features = ["pure"] }
serde = { version = "1.0", default-features = false }

[dev-dependencies]
voting-machine-methods = { path = "../methods" }
risc0-zkvm-serde = "0.7"
