[package]
name = "voting-machine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# risc0-zkvm = { version = "0.11.0-rc.4", default-features = false, features = ["pure"] }
# risc0-zkvm = { version = "0.11.0-rc.4", default-features = false, features = ["pure-prove"] }
risc0-zkp = "0.11.0-rc.4"
risc0-zkvm = { version = "0.11.0-rc.4", default-features = false, features = ["prove"] }
serde = { version = "1.0", default-features = false }
