[package]
name = "voting-machine-methods"
version = "0.12.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[profile.release]
lto = true
opt-level = "z"

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "8a5151f19aa405e1fcac04acda23042367df3a0a" }
