[package]
name = "waldo-host"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
image = "0.24.5"
risc0-zkp = "1.0.0-rc.2"
# TODO: Determine what where the issue is when using metal and reenable that feature here.
# risc0-zkvm = { version = "1.0.0-rc.2", default-features = false, features = ["std", "prove", "metal"] }
risc0-zkvm = { version = "1.0.0-rc.2", default-features = false, features = ["std", "prove", "metal"] }
serde = "1.0"
viuer = "0.6"
waldo-core = { path = "../core" }
waldo-methods = { path = "../methods" }
