[package]
name = "waldo-host"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
image = "0.24.5"
risc0-zkp = "0.12"
risc0-zkvm = "0.12"
serde = "1.0"
viuer = "0.6"
waldo-core = { path = "../core" }
waldo-methods = { path = "../methods" }
