[package]
name = "waldo"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.12.3"
image = { version = "0.24.5", features = ["webp", "png", "bmp"], default-features = false }
merkle_light = "0.4.0"
methods = { path = "../methods" }
rand = "0.8.5"
risc0-zkp = "0.11"
risc0-zkvm = "0.11"
serde = "1.0"
static_assertions = "1.1.0"

sha2 = "0.10.6"
hex = "0.4.3"
