[workspace]

[package]
name = "digital-signature-methods-guest"
version = "0.1.0"
edition = "2021"

[target.riscv32im-unknown-none-elf.dependencies]
digital-signature-core = { path = "../../core" }
risc0-zkvm-guest = "0.7.2"

[profile.release]
lto = true
opt-level = "z"

[build-dependencies]
risc0-build = "0.7.2"
