[workspace]

[package]
name = "digital-signature-methods-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
digital-signature-core = { path = "../../core" }
risc0-zkvm = { version = "0.12", default_features = false}

[profile.release]
lto = true
opt-level = "z"

[build-dependencies]
risc0-build = "0.12"
