[package]
name = "guest"
version = "0.12.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46" }

[dependencies]
json-core = { path = "../../core" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46", default-features = false, features = [ "std" ] }
json = "0.12"
