[package]
name = "password-checker-guest"
version = "0.12.0"
edition = "2021"

[workspace]

[dependencies]
password-checker-core = { path = "../../core" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46", default-features = false, features = [ "std" ] }

[profile.release]
lto = true
opt-level = "z"

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "65fb3871e3ef468be0a306d9f1adf5631d943b46" }
