[package]
name = "password-checker-guest"
version = "0.12.0"
edition = "2021"

[workspace]

[dependencies]
password-checker-core = { path = "../../core" }
risc0-zkvm = { version = "0.12", default-features = false, features = [ "std" ] }

[profile.release]
lto = true
opt-level = "z"

[build-dependencies]
risc0-build = "0.12"
