[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { git = "ssh://git@github.com/risc0/risc0.git", rev = "9a3865a5a54ec1e974250c785545a6bf727f6949" }

[dependencies]
# Guest
risc0-zkvm = { git = "ssh://git@github.com/risc0/risc0.git", rev = "9a3865a5a54ec1e974250c785545a6bf727f6949", default_features = false }
