[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "eaaae8b0dbba8658a62985d5d4b209de5ec6817d" }

[dependencies]
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "eaaae8b0dbba8658a62985d5d4b209de5ec6817d", default-features = false, features = ["std"] }
