[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = "0.12"

[dependencies]
risc0-zkvm = { version = "0.12", default-features = false, features = ["std"] }
sha2 = "0.10.6"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", branch = "sha2-v0.10.6-risc0" }
