[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = "0.12"

[dependencies]
risc0-zkvm = { version = "0.12", default-features = false, features = ["std"] }
pbkdf2 = "0.11"
sha2 = { version = "0.10.6", features = ["alloc"] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", branch = "sha2-v0.10.6-risc0" }
