[workspace]

[package]
name = "voting-machine-methods-guest"
version = "0.12.0"
edition = "2021"

[dependencies]
voting-machine-core = { path = "../../core" }
risc0-zkvm = { version = "0.12", default-features = false }

[profile.release]
lto = true
opt-level = "z"

[build-dependencies]
risc0-build = "0.12"
