[package]
name = "waldo-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = "1.0.0-rc.2"

[dependencies]
image = { version = "0.24.5", default-features = false }
risc0-zkvm = { version = "1.0.0-rc.2", default-features = false, features = ["std"] }
waldo-core = { path = "../../core" }

[profile.release]
lto = true
opt-level = 3

[patch.crates-io]
# TODO(victor): Remove these patch definitions when d02f606a is included in a release.
risc0-zkp = { git = "https://github.com/risc0/risc0", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7"}
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7"}
risc0-build = { git = "https://github.com/risc0/risc0", rev = "d02f606ab7d59ad45dc75314eb3e0eef5c9a26b7"}
